<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".NewAccountFragment">

    <ImageView
        android:id="@+id/twitter_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/bloggies"
        app:layout_constraintTop_toTopOf="parent"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical"
        android:layout_margin="20dp">

        <EditText
            android:id="@+id/email_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/email_hint_input"/>

        <EditText
            android:id="@+id/login_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/login_hint_input"
            android:layout_marginTop="20dp"/>

        <EditText
            android:id="@+id/password_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_hint_input"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>

        <EditText
            android:id="@+id/confirmation_input"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/password_confirmation_input"
            android:layout_marginTop="20dp"
            android:inputType="textPassword"/>
    </LinearLayout>

    <Button
        android:id="@+id/signup_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/signup_button"
        android:layout_marginTop="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="20dp"
        android:layout_marginHorizontal="20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>