<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".HomeFragment">

    <ImageView
        android:id="@+id/bloggies_image"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:src="@drawable/bloggies"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:orientation="vertical">

        <Button
            android:id="@+id/twitter_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/home_twitter_button"
            android:layout_marginHorizontal="30dp"
            android:padding="15dp"/>

        <Button
            android:id="@+id/facebook_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/facebook_home_button"
            android:layout_marginHorizontal="30dp"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/new_account_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_account_button"
            android:layout_marginHorizontal="30dp"
            android:padding="15dp"
            android:layout_marginTop="10dp"/>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>